package.json windows - linux
